# pgs-files

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: print_user_info.rs
src/: entries.rs  group.rs  lib.rs  passwd.rs  shadow.rs
testdata/: group  passwd  shadow
tests/: group.rs  passwd.rs  shadow.rs
