[package]

name = "pgs-files"
version = "0.0.3"
authors = ["Gary M. Josack <gary@byoteki.com>"]
repository = "https://github.com/gmjosack/pgs-files.rs"
documentation = "http://gmjosack.github.io/pgs-files.rs"
license = "Apache-2.0"
description = "Rust Library for handling /etc/{passwd,group,shadow} files"

[lib]
name = "pgs_files"

[dependencies]
libc = "0.1.5"
