[package]

name = "pgs-files"
version = "0.0.7"
authors = ["Gary M. Josack <gary@byoteki.com>"]
repository = "https://github.com/ZeroCostGoods/pgs-files"
documentation = "https://docs.rs/pgs-files"
license = "MIT OR Apache-2.0"
description = "Rust Library for handling /etc/{passwd,group,shadow} files"

[lib]
name = "pgs_files"

[dependencies]
libc = "0.1.9"
